[package]
  name = "chirpstack-gateway-relay"
  description = "ChirpStack Gateway Relay"
  repository = "https://github.com/chirpstack/chirpstack-gateway-relay"
  homepage = "https://www.chirpstack.io/"
  license = "MIT"
  version = "4.0.0"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  edition = "2021"
  publish = false

[dependencies]
  clap = { version = "4.4", default-features = false, features = [
    "std",
    "help",
    "usage",
    "derive",
  ] }
  chirpstack_api = { version = "4.6", default-features = false }
  lrwn_filters = { version = "4.6", features = ["serde"] }
  log = "0.4"
  simple_logger = "4.3"
  syslog = "6.1"
  toml = "0.8"
  handlebars = "4.4"
  zeromq = { version = "0.3.5" }
  anyhow = "1.0"
  serde = { version = "1.0", features = ["derive"] }
  tokio = { version = "1.35", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "fs",
  ] }
  once_cell = "1.19"
  hex = "0.4.3"
  rand = "0.8"
  signal-hook = "0.3"
  signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
  futures = "0.3"
  bytes = "1.5"
  prost-types = "0.12"

[profile.release]
  strip = true
  opt-level = "z"
  lto = true
  codegen-units = 1
  panic = "abort"

# Debian packaging.
[package.metadata.deb]
  assets = [
    [
      "target/release/chirpstack-gateway-relay",
      "usr/bin/",
      "755",
    ],
    [
      "configuration/*.toml",
      "etc/chirpstack-gateway-relay/",
      "640",
    ],
  ]
  conf-files = [
    "/etc/chirpstack-gateway-relay/chirpstack-gateway-relay.toml",
    "/etc/chirpstack-gateway-relay/region_eu868.toml",
  ]
  maintainer-scripts = "packaging/debian/"
  systemd-units = { enable = true }
