[package]
  name = "chirpstack-gateway-mesh"
  description = "ChirpStack Gateway Mesh"
  repository = "https://github.com/chirpstack/chirpstack-gateway-mesh"
  homepage = "https://www.chirpstack.io/"
  license = "MIT"
  version = "4.1.1"
  authors = ["Orne Brocaar <info@brocaar.com>"]
  edition = "2024"
  publish = false

[dependencies]
  clap = { version = "4.5", default-features = false, features = [
    "std",
    "help",
    "usage",
    "derive",
  ] }
  chirpstack_api = { version = "4.15", default-features = false }
  lrwn_filters = { version = "4.15", features = ["serde"] }
  log = "0.4"
  simple_logger = { version = "5.0", default-features = false, features = [
    "timestamps",
  ] }
  syslog = "7.0"
  toml = { version = "0.9", default-features = false, features = [
    "std",
    "parse",
    "serde",
  ] }
  handlebars = "6.3"
  anyhow = "1.0"
  humantime-serde = "1.1"
  serde = { version = "1.0", features = ["derive"] }
  tokio = { version = "1.48", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "fs",
    "sync",
    "process",
    "io-util",
  ] }
  hex = "0.4"
  getrandom = "0.3"
  signal-hook = "0.3"
  signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
  futures = "0.3"
  zmq = "0.10"
  cmac = "0.7"
  aes = "0.8"

[dev-dependencies]
  zeromq = "0.4"
  bytes = "1.11"

[profile.release]
  strip = true
  opt-level = "z"
  lto = true
  codegen-units = 1
  panic = "abort"

  # Debian packaging.
  [package.metadata.deb]
    assets = [
      [
        "target/release/chirpstack-gateway-mesh",
        "usr/bin/",
        "755",
      ],
      [
        "configuration/*.toml",
        "etc/chirpstack-gateway-mesh/",
        "640",
      ],
    ]
    conf-files = [
      "/etc/chirpstack-gateway-mesh/chirpstack-gateway-mesh.toml",
      "/etc/chirpstack-gateway-mesh/region_eu868.toml",
      "/etc/chirpstack-gateway-mesh/region_us915.toml",
    ]
    maintainer-scripts = "packaging/debian/"
    systemd-units = { enable = true }
